--- a/restaurant/src/app/home/home.component.html
+++ b/restaurant/src/app/home/home.component.html
@@ -1,1 +1,13 @@
-<p>home works!</p>
+<mat-card>
+    <mat-card-header>
+      <mat-card-title>A table</mat-card-title>
+      <mat-card-subtitle>du gout et de la qualité</mat-card-subtitle>
+    </mat-card-header>
+    <img mat-card-image [src]="pasta" alt="burger">
+    <mat-card-content>
+      <p>
+    
+      </p>
+    </mat-card-content>
+  </mat-card>
+  
